# LuminoDesk

./: .gitignore  README.md
LuminoDesk_Software/: CMakeLists.txt  main.c  main.cpp
LuminoDesk_Software/lib/bluetoothmanager/: CMakeLists.txt  bluetoothmanager.cpp  bluetoothmanager.hpp
LuminoDesk_Software/lib/device/: CMakeLists.txt  device.cpp  device.hpp
LuminoDesk_Software/lib/effect/: CMakeLists.txt  effect.cpp  effect.hpp
LuminoDesk_Software/lib/hardwaredef/: .hardwaredef.h.kate-swp  CMakeLists.txt  hardwaredef.c  hardwaredef.cpp  hardwaredef.h  hardwaredef.hpp
LuminoDesk_Software/lib/ledchannel/: .ledchannel.h.kate-swp  CMakeLists.txt  ledchannel.c  ledchannel.cpp  ledchannel.h  ledchannel.hpp  ws2812.pio
LuminoDesk_Software/lib/menu/: CMakeLists.txt  menu.c  menu.h
LuminoDesk_Software/lib/shiftregister/: CMakeLists.txt  shiftregister.cpp  shiftregister.hpp
LuminoDesk_Software/lib/testroutines/: CMakeLists.txt  testroutines.c  testroutines.cpp  testroutines.h  testroutines.hpp
